test/tests/stages/18_structures/invalid_types/tag_resolution/conflicting_fun_ret_types.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[30]:
  struct
  identifier(s)
  ;
  struct
  identifier(s)
  identifier(foo)
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  ;
  struct
  identifier(s)
  identifier(foo)
  (
  void
  )
  ;
  return
  const int(0)
  ;
  }
